fixed alignment issues

--- a/design-components/packages/railz-components/src/components/railz-button/railz-button.scss
+++ b/design-components/packages/railz-components/src/components/railz-button/railz-button.scss
@@ -133,6 +133,7 @@ button {
   min-width: 0;
   padding: space(0.5) space(1);
   margin: 0 space(-1);
+  font-weight: font-weight('semi-bold');
 
   > *:empty {
     display: none;
@@ -231,6 +232,14 @@ button {
   .icon {
     @include icon-size('small');
   }
+
+  .prefix {
+    margin-left: space(-0.5);
+  }
+
+  .suffix {
+    margin-right: space(-0.5);
+  }
 }
 
 .x-large {
@@ -262,6 +271,9 @@ button {
     width: 100%;
     object-fit: contain;
     font-size: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
